# AvatarX

./: .gitignore  .gitmodules  README.md  gradio_app.py  gradio_audio.py  gradio_video.py  inference.py  inference_audio.py  init_env.sh  launch.sh  lipsync_pipeline_optimized.py  main.py  numbers_converter.py  pyproject.toml  requirements.txt  set_proxy.sh  setup_env.bat  setup_env.sh  util.py
