[project]
name = "AvatarX"
version = "1.0.0"
description = "AvatarX: A Digital Human project built with LatentSync and F5-TTS"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gradio",
    "torch==2.7.0",
    "accelerate>=0.33.0",
    "bitsandbytes>0.37.0; platform_machine != 'arm64' and platform_system != 'Darwin'",
    "cached_path",
    "datasets",
    "ema_pytorch>=0.5.2",
    "hydra-core>=1.3.0",
    "jieba",
    "librosa",
    "matplotlib",
    "numpy==1.26.4",
    "pydantic<=2.10.6",
    "pydub",
    "pypinyin",
    "safetensors",
    "soundfile",
    "tomli",
    "torchaudio>=2.0.0",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "vocos",
    "wandb",
    "x_transformers>=1.31.14",
    "torchvision==0.22.0",
    "diffusers==0.32.2",
    "decord==0.6.0",
    "einops==0.7.0",
    "omegaconf==2.3.0",
    "opencv-python==4.9.0.80",
    "mediapipe==0.10.11",
    "python_speech_features==0.6",
    "librosa==0.10.1",
    "scenedetect==0.6.1",
    "ffmpeg-python==0.2.0",
    "imageio==2.31.1",
    "imageio-ffmpeg==0.5.1",
    "lpips==0.1.4",
    "face-alignment==1.4.1",
    "huggingface-hub==0.30.2",
    "kornia==0.8.0",
    "insightface==0.7.3",
    "onnxruntime-gpu==1.21.0",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "funasr",
    "jiwer",
    "modelscope",
    "zhconv",
    "zhon",
]

[project.urls]
Homepage = "https://github.com/bestilyq/AvatarX"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"
